site-container no longer flex
This was causing layout issues with immediate children, especially group blocks in before header template part.

I’m not sure why it was a flex container, but I don’t see an need for it now.

@seothemes if you know why or see it break something, let’s discuss.

--- a/assets/scss/layout/_site-container.scss
+++ b/assets/scss/layout/_site-container.scss
@@ -1,9 +1,5 @@
 .site-container {
-	display: flex;
 	flex: 1;
-	flex-direction: column;
-	flex-wrap: wrap;
-	justify-content: flex-start;
 	width: 100%;
 	max-width: var(--site-container-max-width, unset);
 	margin: var(--site-container-margin, unset);
